tests/snapshots/run_wpt_conformance__litert_reduceSumSquare_float16_0D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_sum_square.https.any.js reduceSumSquare float16 0D constant tensor empty axes, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ReduceSumSquare { input: 0, options: Some(MLReduceOptions { label: "", axes: Some([]), keep_dimensions: false }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[] @bytes([146, 82]);
  }

  nodes {
    [reduceSumSquareOutput] = reduceSumSquare(operand_0, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceSumSquareOutput; }
}
